--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="profile">
               <img class="me" src="images/mypic3.png" alt="myself">
               <h2>Hello.</h2>
-              <p class="Intro">Welcome to my website, I am a Machiene Learning Enthusiast and will be posting all my projects here.</p>
+              <p class="Intro">Welcome to my website, I am a Machine Learning Enthusiast and will be posting all my projects here.</p>
             </div>
             <hr>
             <div class="skills">
